actividad de repaso 1

--- a/repaso/actividades/repaso1/actividad.html
+++ b/repaso/actividades/repaso1/actividad.html
@@ -11,19 +11,15 @@
 <main>
     <section class="gradients">
         <div id='container'>
-            <div id='box_tl' class='boxes'>
+            <div id='box_tl' class='boxes translate'>
             </div>
-
-            <div id='box_tr' class='boxes'>
+            <div id='box_tr' class='boxes  skew'>
             </div>
-
-            <div id='box_bl' class='boxes'>
+            <div id='box_bl' class='boxes  colors'>
             </div>
-
-            <div id='box_center'class='boxes'>
+            <div id='box_center' class='boxes scale'>
             </div>
-
-            <div id='box_br' class='boxes'>
+            <div id='box_br' class='boxes rotate'>
             </div>
         </div>
     </section>
