cambio de clases a id

--- a/repaso/actividades/repaso2/actividad.html
+++ b/repaso/actividades/repaso2/actividad.html
@@ -11,15 +11,15 @@
 <main>
     <section class="gradients">
         <div id='container'>
-            <div id='box_tl' class='boxes translate'>
+            <div id='box_tl' class='boxes'>
             </div>
-            <div id='box_tr' class='boxes  skew'>
+            <div id='box_tr' class='boxes'>
             </div>
-            <div id='box_bl' class='boxes  colors'>
+            <div id='box_bl' class='boxes'>
             </div>
-            <div id='box_center' class='boxes scale'>
+            <div id='box_center' class='boxes'>
             </div>
-            <div id='box_br' class='boxes rotate'>
+            <div id='box_br' class='boxes'>
             </div>
         </div>
     </section>
