--- a/repaso/sass/aprendizaje/Variables - Import - Partials/index.html
+++ b/repaso/sass/aprendizaje/Variables - Import - Partials/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="mystyle.css">
+<link rel="stylesheet" href="style/style.css">
 <body>
 
 <h1>Hello World</h1>
