--- a/repaso/sass/aprendizaje/extend/index.html
+++ b/repaso/sass/aprendizaje/extend/index.html
@@ -3,9 +3,9 @@
 <link rel="stylesheet" href="style/style.css">
 <body>
 
-<h1>Hello World - Mixin basic</h1>
+<h1>Hello World - Extend</h1>
 
-<p class="danger">Warning! This is some text.</p>
-
+<button class="button-basic button-report">Report this</button>
+<button class="button-basic button-submit ">Submit</button>
 </body>
 </html>
