--- a/repaso/sass/aprendizaje/Nesting/index.html
+++ b/repaso/sass/aprendizaje/Nesting/index.html
@@ -5,8 +5,12 @@
 
 <nav>
     <ul>
-        <li><a href="#">HTML</a></li>
-        <li><a href="#">CSS</a></li>
+        <li>
+            <a href="#">HTML</a>
+        </li>
+        <li>
+            <a href="#">CSS</a>
+        </li>
         <li><a href="#">SASS</a></li>
     </ul>
 </nav>
