ajuste de ejercicios

--- a/clases/10-flexbox/ejemplos/1.flex/index.html
+++ b/clases/10-flexbox/ejemplos/1.flex/index.html
@@ -11,7 +11,7 @@
 <main>
     <h1>Flexbox - Propiedades elementos padre</h1>
     <h2>display: flex</h2>
-    <!--solo 1.2.flex-direction con todo por default-->
+    <!--solo 1.2.flex-direction: row - column con todo por default-->
     <div class="flex">
         <div class="box"></div>
         <div class="box"></div>
