--- a/clases/10-flexbox/ejemplos/2.flex-direction: row - column/index.html
+++ b/clases/10-flexbox/ejemplos/2.flex-direction: row - column/index.html
@@ -10,7 +10,7 @@
 <body>
 <main>
     <h1>Flexbox - Propiedades elementos padre</h1>
-    <!--1.2.flex-direction-->
+    <!--1.2.flex-direction: row - column-->
     <h2>Flex-direction:</h2>
     <h3>row</h3>
     <div class="row">
