--- a/clases/10-flexbox/ejemplos/3.flex-direction: wrap/index.html
+++ b/clases/10-flexbox/ejemplos/3.flex-direction: wrap/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <main>
-    <!--1.2.flex-direction-wrap, todos ejemplificadas con 1.2.flex-direction row-->
+    <!--1.2.flex-direction: row - column-wrap, todos ejemplificadas con 1.2.flex-direction: row - column row-->
     <h2>Flex-wrap:</h2>
     <p>Ejemplificado con flex-direction: row</p>
     <h3>nowrap</h3>
