--- a/clases/10-flexbox/ejemplos/4.flex-flow/index.html
+++ b/clases/10-flexbox/ejemplos/4.flex-flow/index.html
@@ -10,7 +10,7 @@
 <body>
 <main>
     <h1>Flexbox - Propiedades elementos padre</h1>
-    <!--1.2.flex-direction-flow, abreviacion-->
+    <!--1.2.flex-direction: row - column-flow, abreviacion-->
     <h2>Flex-flow:</h2>
     <h3>ej. flex-flow: row wrap;</h3>
     <div class="wrap_row">
@@ -23,81 +23,6 @@
         <div class="box">7</div>
         <div class="box">8</div>
     </div>
-    <!--justify-content, alineacion en base al eje principal: row-horizontal y column-vertical-->
-    <h2>justify-content</h2>
-    <p>justify-content con flex-direction: row</p>
-    <h3>justify-content: flex-start</h3>
-    <div class="jc jc-start">
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
-        <div class="box">4</div>
-    </div>
-    <h3>justify-content: flex-end</h3>
-    <div class="jc jc-end">
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
-        <div class="box">4</div>
-    </div>
-    <h3>justify-content: center</h3>
-    <div class="jc jc-center">
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
-        <div class="box">4</div>
-    </div>
-    <h3>justify-content: space-between</h3>
-    <div class="jc jc-between">
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
-        <div class="box">4</div>
-    </div>
-    <h3>justify-content: space-around</h3>
-    <div class="jc jc-around">
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
-        <div class="box">4</div>
-    </div>
-    <p>Justify-content con flex-direction: column</p>
-    <h3>justify-content: flex-start</h3>
-    <div class="jc-col jc-start">
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
-        <div class="box">4</div>
-    </div>
-    <h3>justify-content: flex-end</h3>
-    <div class="jc-col jc-end">
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
-        <div class="box">4</div>
-    </div>
-    <h3>justify-content: center</h3>
-    <div class="jc-col jc-center">
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
-        <div class="box">4</div>
-    </div>
-    <h3>justify-content: space-between</h3>
-    <div class="jc-col jc-between">
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
-        <div class="box">4</div>
-    </div>
-    <h3>justify-content: space-around</h3>
-    <div class="jc-col jc-around">
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
-        <div class="box">4</div>
-    </div>
-
 </main>
 </body>
 </html>
