--- a/clases/10-flexbox/ejemplos/0.full/index.html
+++ b/clases/10-flexbox/ejemplos/0.full/index.html
@@ -11,14 +11,14 @@
 <main>
     <h1>Flexbox - Propiedades elementos padre</h1>
     <h2>display: flex</h2>
-    <!--solo 1.2.flex-direction con todo por default-->
+    <!--solo 1.2.flex-direction: row - column con todo por default-->
     <div class="flex">
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
     </div>
-    <!--1.2.flex-direction-->
+    <!--1.2.flex-direction: row - column-->
     <h2>Flex-direction:</h2>
     <h3>row</h3>
     <div class="row">
@@ -48,7 +48,7 @@
         <div class="box">3</div>
         <div class="box">4</div>
     </div>
-    <!--1.2.flex-direction-wrap, todos ejemplificadas con 1.2.flex-direction row-->
+    <!--1.2.flex-direction: row - column-wrap, todos ejemplificadas con 1.2.flex-direction: row - column row-->
     <h2>Flex-wrap:</h2>
     <p>Ejemplificado con flex-direction: row</p>
     <h3>nowrap</h3>
@@ -84,7 +84,7 @@
         <div class="box">7</div>
         <div class="box">8</div>
     </div>
-    <!--1.2.flex-direction-flow, abreviacion-->
+    <!--1.2.flex-direction: row - column-flow, abreviacion-->
     <h2>Flex-flow:</h2>
     <h3>ej. flex-flow: row wrap;</h3>
     <div class="wrap_row">
