Rama Brayan y Daniel

--- a/clases/10-flexbox/actividades/actividadBD/index.html
+++ b/clases/10-flexbox/actividades/actividadBD/index.html
@@ -12,10 +12,10 @@
             <div class="logo"></div>
             <div class="menu">
                 <nav>
-                    <li>Item1</li>
-                    <li>Item1</li>
-                    <li>Item1</li>
-                    <li>Item1</li>
+                    <li>Menu1</li>
+                    <li>Menu2</li>
+                    <li>Menu3</li>
+                    <li>Menu4</li>
                 </nav>
             </div>
         </div>
@@ -23,14 +23,14 @@
     <main>
         <div class="izquierda">
             <nav>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Item1</li>
+                <li>Item2</li>
+                <li>Item3</li>
+                <li>Item4</li>
+                <li>Item5</li>
+                <li>Item6</li>
+                <li>Item7</li>
+                <li>Item8</li>
             </nav>
         </div>
         <div class="derecha">
