--- a/repaso/actividades/repaso3/actividad.html
+++ b/repaso/actividades/repaso3/actividad.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Posicionamiento y animaciones</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
 <main>
     <section class="gradients">
-        <div id='container'>
+        <article id='container'>
             <div id='box_tl' class='boxes'>
             </div>
             <div id='box_tr' class='boxes'>
@@ -21,7 +21,7 @@
             </div>
             <div id='box_br' class='boxes'>
             </div>
-        </div>
+        </article>
     </section>
 </main>
 </body>
