--- a/clases/10-flexbox/ejemplos/1.flex/index.html
+++ b/clases/10-flexbox/ejemplos/1.flex/index.html
@@ -13,10 +13,10 @@
     <h2>display: flex</h2>
     <!--solo 1.2.flex-direction: row - column con todo por default-->
     <div class="flex">
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+        <div class="box">1</div>
+        <div class="box">2</div>
+        <div class="box">3</div>
+        <div class="box">4</div>
     </div>
 </main>
 </body>
