--- a/clases/11- flexbox avanzado/ejemplos/v1/1.flex-grow/index.html
+++ b/clases/11- flexbox avanzado/ejemplos/v1/1.flex-grow/index.html
@@ -9,11 +9,13 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Flex Grow</h1>
+<h2>Flex Grow</h2>
+<p>Especifica el factor de crecimiento de un elemento flexible</p>
 <div class="grow-container">
     <div class="grow-item">A</div>
     <div class="grow-item">B</div>
     <div class="grow-item">C</div>
     <div class="grow-item">D</div>
 </div>
+</body>
 </html>
