--- a/clases/11- flexbox avanzado/ejemplos/v1/2.flex-shrink/index.html
+++ b/clases/11- flexbox avanzado/ejemplos/v1/2.flex-shrink/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <h1>Flex Shrink </h1>
-<p>Achica la ventana para ver el comportamiento</p>
+<p>especifica el factor de contracción de un flex item</p>
 <div class="shrink-container">
     <div class="flex-item flex1">1</div>
     <div class="flex-item flex2">2</div>
