--- a/clases/10-flexbox/actividades/actividad 1  -  sin prefijos/index.html
+++ b/clases/10-flexbox/actividades/actividad 1  -  sin prefijos/index.html
@@ -39,6 +39,14 @@
             <img src="http://via.placeholder.com/250x200" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut corrupti quidem sint quae nostrum, pariatur iure tempore provident sequi officia vitae culpa distinctio eos! Quisquam optio tempora iusto ad. Magni.</p>
         </article>
+        <article>
+            <img src="http://via.placeholder.com/250x200" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut corrupti quidem sint quae nostrum, pariatur iure tempore provident sequi officia vitae culpa distinctio eos! Quisquam optio tempora iusto ad. Magni.</p>
+        </article>
+        <article>
+            <img src="http://via.placeholder.com/250x200" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut corrupti quidem sint quae nostrum, pariatur iure tempore provident sequi officia vitae culpa distinctio eos! Quisquam optio tempora iusto ad. Magni.</p>
+        </article>
     </section>
 </main>
 </body>
