--- a/clases/11- flexbox avanzado/ejemplos/v1/3.order/index.html
+++ b/clases/11- flexbox avanzado/ejemplos/v1/3.order/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <h1>Order</h1>
+<p>especifica el orden utilizado para disponer los elementos en su contenedor flexible</p>
 <div class="order-container">
     <div class="order-item">1</div>
     <div class="order-item">2</div>
