--- a/clases/13.framework-metodologia-agil/actividades/actividad 1/index.html
+++ b/clases/13.framework-metodologia-agil/actividades/actividad 1/index.html
@@ -149,6 +149,7 @@
                 <button type="button" class="btn btn-primary">3</button>
                 <button type="button" class="btn btn-primary">4</button>
             </div>
+        </div>
     </main>
 </div>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
