--- a/clases/29.promesa-2/3.programan/index.html
+++ b/clases/29.promesa-2/3.programan/index.html
@@ -1,5 +1,3 @@
-<!doctype html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -9,6 +7,14 @@
 </head>
 <body>
 <div id="imgCtn"></div>
+<div id="pokeCtn"></div>
+<div>
+    <h2>Ejercicio 3</h2>
+    <input type="number" name="pokemon1" placeholder ="agrega un id">
+    <input type="number" name="pokemon2" placeholder ="agrega un id">
+    <input type="number" name="pokemon3" placeholder ="agrega un id">
+    <button id="boton">Buscar</button>
+</div>
 <script src="main.js"></script>
 </body>
 </html>
