actualizacion de api

--- a/clases/30.apis/3.programan/index.html
+++ b/clases/30.apis/3.programan/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+<input type="text" id="search" placeholder="Search News...">
+<button id="searchBtn">Buscar</button>
+<button id="trending">ver trending</button>
+<div id="pokeCtn"></div>
 <script src="main.js"></script>
 </body>
 </html>
