--- a/clases/30.workshop/1.programo/4.ejemplo/index.html
+++ b/clases/30.workshop/1.programo/4.ejemplo/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h1>moment js</h1>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script src="js/main.js"></script>
 </body>
